# dnadis

./: .gitignore  CITATION.cff  CLAUDE.md  COLOR_PALETTE_DESIGN.md  COLOR_REFERENCE.txt  LICENSE  PALETTE_UPDATES_SUMMARY.txt  README.md  TODO.md  conda-list.txt  dnadis.py  environment.yml  final_finalizer.py  pyproject.toml  pytest.ini  refresh_plots.py  refresh_reports.py  requirements.txt  subgenome_assignment_overview.tmpl.R  visual_reporting.tmpl.R
.github/workflows/: ci-scheduled.yml  ci.yml
data/: README.md  athal-45s-features.tsv  athal-45s-ref.fa
dev/docs/: 45s-rdna-array-detection-plan.md  TODO.md  design-decisions.md  distributed-computing-plan.md  kmer-subgenome-inference-plan.md  multi-assembly-phase1-plan.md  multi-assembly-phase2-3-plan.md  pipeline-flowchart.dot  rearrangement-detection-plan.md  unified-html-report-plan.md
dnadis/: __init__.py  __main__.py  cli.py  models.py
dnadis/alignment/: __init__.py  chain_parsing.py  external_tools.py  pairwise.py  stats.py
dnadis/analysis/: __init__.py  read_depth.py
dnadis/classification/: __init__.py  classifier.py
dnadis/detection/: __init__.py  blast.py  compleasm.py  (+7 more)
docs/: output_formats.md
final_finalizer/: __init__.py  __main__.py  cli.py  models.py
scripts/: README.md  bundle_single_file.py  update_readme_conda_versions.py  update_readme_python.py
tests/: test_comparison.py  test_distributed.py  test_dnadis.py  test_dnadis_integration.py  test_final_finalizer.py  test_final_finalizer_integration.py  test_multi_assembly.py  test_pairwise.py  test_read_depth.py  test_rearrangements.py
(+72 files in other folders)
