[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "final_finalizer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "intervaltree",
]

[project.scripts]
final_finalizer = "final_finalizer.cli:main"

[tool.setuptools.packages.find]
include = ["final_finalizer*"]
